Add SqlSegmentsMetadataCache